Modificación de parrafo footer

--- a/contacto.html
+++ b/contacto.html
@@ -106,7 +106,7 @@
             </nav>
             <div>
                 <p class="pFooter">
-                    Diseñado por Nicole Marenco | Todos los derechos reservados ©
+                    Nicole Marenco | Todos los derechos reservados ©
                 </p>
               </div>
         </footer>
