--- a/faq.html
+++ b/faq.html
@@ -134,7 +134,7 @@
     </nav>
     <div>
         <p class="pFooter">
-            Diseñado por Nicole Marenco | Todos los derechos reservados ©
+            Nicole Marenco | Todos los derechos reservados ©
         </p>
       </div>
 </footer>
