--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
         </nav>
         <div>
           <p class="pFooter">
-            Diseñado por Nicole Marenco | Todos los derechos reservados ©
+            Nicole Marenco | Todos los derechos reservados ©
           </p>
         </div>
     </footer>
