--- a/index.html
+++ b/index.html
@@ -75,21 +75,21 @@
                         <div class="carousel-inner">
                           <div class="carousel-item active">
                             <img src="multimedia/car1.png" class="d-block w-100" alt="Imagen tattoo carousel 1">
-                            <div class="carousel-caption d-md-block">
+                            <div class="carousel-caption d-md-block bg-dark bg-opacity-50">
                               <h5>Experiencia ES</h5>
                               <p>Desde que reservas tu turno hasta luego de realizado el trabajo</p>
                             </div>
                           </div>
                           <div class="carousel-item">
                             <img src="multimedia/historia.png" class="d-block w-100" alt="Imagen tattoo carousel 2">
-                            <div class="carousel-caption d-md-block">
+                            <div class="carousel-caption d-md-block bg-dark bg-opacity-50">
                               <h5>Asesoramiento personalizado</h5>
                               <p>Te ayudamos a encontrar el diseño perfecto para tu tatuaje</p>
                             </div>
                           </div>
                           <div class="carousel-item">
                             <img src="multimedia/caretest1.png" class="d-block w-100" alt="Imagen tattoo carousel 3">
-                            <div class="carousel-caption d-md-block">
+                            <div class="carousel-caption d-md-block bg-dark bg-opacity-50">
                               <h5>Seguimiento post sesión</h5>
                               <p>Te acompañamos en el proceso de cicatización despejando cualquier duda</p>
                             </div>
