--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                             </div>
                           </div>
                           <div class="carousel-item">
-                            <img src="multimedia/caretest1.png" class="d-block w-100" alt="Imagen tattoo carousel 3">
+                            <img src="multimedia/car33.png" class="d-block w-100" alt="Imagen tattoo carousel 3">
                             <div class="carousel-caption d-md-block bg-dark bg-opacity-50">
                               <h5>Seguimiento post sesión</h5>
                               <p>Te acompañamos en el proceso de cicatización despejando cualquier duda</p>
