--- a/faq.html
+++ b/faq.html
@@ -64,7 +64,7 @@
         <img class="imgFAQ" src="multimedia/care4.png" alt="Imagen cuidados tattoo">
     </div>
     </div>
-
+<!-- Acordion Bootstrap -->
     <div class="container">
     <div class="accordion accordion-flush " id="accordionFlushExample">
       <div class="accordion-item">
