--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <meta name="keywords" content="tatuajes, tatuaje, tattoo, tatu, tatuador, tattoo studio, arte, art, piel, ES tattoo">
     <!-- Meta descripción -->
     <meta name="description" content="Somos un estudio de tatuajes y arte con seguimiento personalizado a nuestros clientes.">
-    <meta property="og:image" content="multimedia/logo2.png"/>
+    <!-- Opengraph imagen-->
+    <meta property="og:image" content="multimedia/logo2.webp"/>
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- CSS -->
