--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- Meta descripción -->
     <meta name="description" content="Somos un estudio de tatuajes y arte con seguimiento personalizado a nuestros clientes.">
     <!-- Opengraph imagen-->
-    <meta property="og:image" content="multimedia/logo2.webp"/>
+    <meta property="og:image" content="multimedia/logo2.jpg"/>
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- CSS -->
