--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+<html prefix="og: https://ogp.me/ns#"></html>
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,8 +9,11 @@
     <meta name="keywords" content="tatuajes, tatuaje, tattoo, tatu, tatuador, tattoo studio, arte, art, piel, ES tattoo">
     <!-- Meta descripción -->
     <meta name="description" content="Somos un estudio de tatuajes y arte con seguimiento personalizado a nuestros clientes.">
-    <!-- Opengraph imagen-->
-    <meta property="og:image" content="multimedia/logo2.jpg"/>
+    <!-- Opengraph-->
+    <meta property="og:title" content="Es Art & Tattoo Studio" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="estattoandart.000webhostapp.com/" />
+    <meta property="og:image" content="multimedia/og.jpg"/>
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- CSS -->
