--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:url" content="estattoandart.000webhostapp.com/" />
     <meta property="og:image" content="multimedia/og.jpg"/>
+    <meta property="og:description" content="Somos un estudio de tatuajes y arte con seguimiento personalizado a nuestros clientes." />
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- CSS -->
