--- a/turnos.html
+++ b/turnos.html
@@ -55,20 +55,24 @@
         <form class="formulario" action="" method="">
             <ul>
                 <li>
-                    <p class="parrafoFormulario">Nombre y apellido (*): <input type="text" name="nombre" size="40" required></p>
+                    <p class="parrafoFormulario">Nombre y apellido (*): </p>
+                    <input type="text" name="nombre" size="40" required>
                 </li>
                 <li>
-                    <p class="parrafoFormulario">Mail (*): <input type="email" name="mail" required></p>
+                    <p class="parrafoFormulario">Mail (*): </p>
+                    <input type="email" name="mail" required>
                 </li>
                 <li>
                     <p class="parrafoFormulario">Describinos el tatuaje que queres realizarte:</p>
-                    <textarea name="texto" cols="30" rows="8"></textarea>
+                    <textarea name="texto" cols="50" rows="8"></textarea>
                 </li>
                 <li>
-                    <p class="parrafoFormulario">Medida aproximada en cms: <input type="number" name="medida"></p>
+                    <p class="parrafoFormulario">Medida aproximada en cms: </p>
+                    <input type="number" name="medida">
                 </li>
                 <li>
-                    <p class="parrafoFormulario">¿En qué mes queres tatuarte? (*): <input type="month" name="mes" size="40" required></p>
+                    <p class="parrafoFormulario">¿En qué mes queres tatuarte? (*): </p>
+                    <input class="parrafoFormulario" type="month" name="mes" size="40" required>
                 </li>
                 <li>
                     <p class="parrafoFormulario">¿En qué franja horaria tenés disponibilidad?:
@@ -77,8 +81,8 @@
                     </p>
                 </li>
             </ul>
-            <input class="botonesForm" type="submit" value="Enviar">
-            <input class="botonesForm" type="reset" value="Borrar">
+            <input class="botonesForm1" type="submit" value="Enviar">
+            <input class="botonesForm2" type="reset" value="Borrar">
         </form>
     </section>
             <!-- Acá termina el formulario-->
