--- a/contacto.html
+++ b/contacto.html
@@ -9,6 +9,12 @@
     <meta name="keywords" content="contactanos, contacto, información, donde estamos, teléfono, mail, horarios, ubicación">
     <!-- Meta descripción -->
     <meta name="description" content="Conocé nuestros horarios de atención, dónde estamos y puntos de contacto">
+    <!-- Opengraph-->
+    <meta property="og:title" content="Es Art & Tattoo Studio" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="estattoandart.000webhostapp.com/contacto.html" />
+    <meta property="og:image" content="multimedia/og.jpg"/>
+    <meta property="og:description" content="Contactate con nosotros" />
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- CSS -->
