--- a/faq.html
+++ b/faq.html
@@ -8,6 +8,12 @@
     <meta name="keywords" content="cuidados, piel, cicatrización, curarse, cremas, humectante, tatuajes, tattoo">
     <!-- Meta descripción -->
     <meta name="description" content="Te ayudamos con las dudas más frecuentes antes y después de realizarte un tatuaje">
+    <!-- Opengraph-->
+    <meta property="og:title" content="Es Art & Tattoo Studio" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="estattoandart.000webhostapp.com/faq.html" />
+    <meta property="og:image" content="multimedia/og.jpg"/>
+    <meta property="og:description" content="Preguntas frecuentes y cuidados de un tatuaje" />
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- CSS -->
