--- a/trabajos.html
+++ b/trabajos.html
@@ -8,6 +8,12 @@
     <meta name="keywords" content="tatuaje, tatuador, tatuajes, tattoo, arte, piel, blackwork, old school, tradicional, neotradicional, minimalista, acuarela, estilos, trabajos, trabajo">
     <!-- Meta descripción -->
     <meta name="description" content="Nuestros trabajos realizados en distintos estilos de tatuajes">
+    <!-- Opengraph-->
+    <meta property="og:title" content="Es Art & Tattoo Studio" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="estattoandart.000webhostapp.com/trabajos.html" />
+    <meta property="og:image" content="multimedia/og.jpg"/>
+    <meta property="og:description" content="Conocé nuestros trabajos" />
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- CSS -->
