--- a/turnos.html
+++ b/turnos.html
@@ -8,6 +8,12 @@
     <meta name="keywords" content="turnos, agenda, agendar, turno, horarios, disponibilidad, fechas">
     <!-- Meta descripción -->
     <meta name="description" content="Podes completar el formulario para coordinar un turno con nosotros">
+    <!-- Opengraph-->
+    <meta property="og:title" content="Es Art & Tattoo Studio" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="estattoandart.000webhostapp.com/turnos.html" />
+    <meta property="og:image" content="multimedia/og.jpg"/>
+    <meta property="og:description" content="Agendá un turno en ES Art & Tattoo" />
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- CSS -->
