--- a/trabajos.html
+++ b/trabajos.html
@@ -20,6 +20,8 @@
     <link rel="stylesheet" href="css/style.css">
     <!--AOS Animación-->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <!--Icono-->
+    <link rel="icon" href="multimedia/logo2.ico">
     <title>Trabajos - ES Art & Tattoo Studio</title>
 </head>
 <body>
