--- a/contacto.html
+++ b/contacto.html
@@ -21,6 +21,8 @@
     <link rel="stylesheet" href="css/style.css">
     <!-- AOS Animación -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <!--Icono-->
+    <link rel="icon" href="multimedia/logo2.ico">
     <title>Contacto - ES Art & Tattoo Studio</title>
 
 </head>
