--- a/contacto.html
+++ b/contacto.html
@@ -23,9 +23,10 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <!--Icono-->
     <link rel="icon" href="multimedia/logo2.ico">
+    <!--Metas para IOS-->
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-<meta name="format-detection" content="telephone=no" />
-<meta name="x-apple-disable-message-reformatting" />
+    <meta name="format-detection" content="telephone=no" />
+    <meta name="x-apple-disable-message-reformatting" />
     <title>Contacto - ES Art & Tattoo Studio</title>
 
 </head>
