--- a/index.html
+++ b/index.html
@@ -66,15 +66,9 @@
             <h1 class="tituloHistoria" data-aos="fade-right"
                                         data-aos-offset="300"
                                         data-aos-easing="ease-in-sine">Somos ES</h1>
-                    <p class="parrafoHistoria">
-                      Somos un equipo de amigxs y artistas que se dedican a realizar tatuajes desde el año 2010.
-                      Antes del 2010, cada uno trabajaba por cuenta propia, hasta que decidimos comenzar un emprendimiento en donde pudiéramos desarrollar un studio de tatuajes y de arte, entendiendo a estos dos puntos como un todo.
-                    </p>
-                    <p class="parrafoHistoria">
-                      Nuestro objetivo fue crear y brindar una experiencia que acompañe al cliente de punta a punta, acompañándolo desde el momento en que decide realizar su tatuaje con nosotros hasta el momento en que terminamos la sesión y coordinamos un seguimiento virtual de una semana de duración, para que pueda quitar todas sus dudas en todo momento.
-                    </p>
+                    
                     <!-- CAROUSEL BOOTSTRAP -->
-                    <div id="carouselExampleCaptions" class="carousel slide carouselES container" data-bs-ride="carousel">
+                    <div id="carouselExampleCaptions" class="carousel slide carouselES w-100 container" data-bs-ride="carousel">
                         <div class="carousel-indicators">
                           <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
                           <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -111,6 +105,15 @@
                           <span class="carousel-control-next-icon" aria-hidden="true"></span>
                           <span class="visually-hidden">Next</span>
                         </button>
+                      </div>
+                      <div class="gridContainer1 container">
+                        <p class="parrafoHistoria gridHistoria1" data-aos="flip-left">
+                          Somos un equipo de amigxs y artistas que se dedican a realizar tatuajes desde el año 2010.
+                          Antes del 2010, cada uno trabajaba por cuenta propia, hasta que decidimos comenzar un emprendimiento en donde pudiéramos desarrollar un studio de tatuajes y de arte, entendiendo a estos dos puntos como un todo.
+                        </p>
+                        <p class="parrafoHistoria gridHistoria2" data-aos="flip-right">
+                          Nuestro objetivo fue crear y brindar una experiencia que acompañe al cliente de punta a punta, acompañándolo desde el momento en que decide realizar su tatuaje con nosotros hasta el momento en que terminamos la sesión y coordinamos un seguimiento virtual de una semana de duración, para que pueda quitar todas sus dudas en todo momento.
+                        </p>
                       </div>
                     </section>
         </section>
