--- a/trabajos.html
+++ b/trabajos.html
@@ -63,7 +63,7 @@
     <main>
         <section id="Trabajos">
             <h1 class="tituloTrabajo" data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine">Nuestros trabajos</h1>
-            <p class="parrafoTrabajo">Siempre trabajamos con materiales de calidad, descartables, manteniendo una limpieza diaria y a cada momento de nuestras zonas de trabajo y estudio.
+            <p class="parrafoTrabajo" data-aos="flip-up">Siempre trabajamos con materiales de calidad, descartables, manteniendo una limpieza diaria y a cada momento de nuestras zonas de trabajo y estudio.
                 Realizamos distintos estilos de tatuajes, buscando tener una amplia gama de artistas y estilos para que los clientes puedan elegir que tipo de tatuaje buscan, sin tener que centrarse en un único estilo.
                 Los estilos que más trabajamos son Blackwork, Tradicional (old school) y Neotradicional, Minimalista, Acuarela, entre otros.
                 También realizamos otros estilos de tatuajes que los clientes busquen.</p>
