--- a/faq.html
+++ b/faq.html
@@ -94,7 +94,8 @@
           </button>
         </h2>
         <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
-          <div class="accordion-body">Podés reservar tu turno haciendo click en la opción “Turnos” del menú que figura arriba, completando el formulario. 
+          <div class="accordion-body">Podés reservar tu turno haciendo click en la opción “Turnos” del menú que figura arriba, completando el formulario. Una vez completes y envíes el formulario, te vamos 
+            a contactar mediante el mail y/o teléfono que nos brindaste.
             Si tenés dudas, podés contactarnos mediante cualquiera de nuestras redes sociales y/o WhatsApp, estamos para ayudarte.</div>
       </div>
       <div class="accordion-item">
