--- a/index.html
+++ b/index.html
@@ -62,61 +62,58 @@
 
     <!-- Inicio zona central de mi sitio -->
     <main class="container">
-        <section id="Historia">
-            <h1 class="tituloHistoria" data-aos="fade-right"
-                                        data-aos-offset="300"
-                                        data-aos-easing="ease-in-sine">Somos ES</h1>
-                    
-                    <!-- CAROUSEL BOOTSTRAP -->
-                    <div id="carouselExampleCaptions" class="carousel slide carouselES w-100 container" data-bs-ride="carousel">
-                        <div class="carousel-indicators">
-                          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-                        </div>
-                        <div class="carousel-inner">
-                          <div class="carousel-item active">
-                            <img src="multimedia/car1.png" class="d-block w-100" alt="Imagen tattoo carousel 1">
-                            <div class="carousel-caption d-md-block bg-dark bg-opacity-50">
-                              <h5>Experiencia ES</h5>
-                              <p>Desde que reservas tu turno hasta luego de realizado el trabajo</p>
-                            </div>
-                          </div>
-                          <div class="carousel-item">
-                            <img src="multimedia/historia.png" class="d-block w-100" alt="Imagen tattoo carousel 2">
-                            <div class="carousel-caption d-md-block bg-dark bg-opacity-50">
-                              <h5>Asesoramiento personalizado</h5>
-                              <p>Te ayudamos a encontrar el diseño perfecto para tu tatuaje</p>
-                            </div>
-                          </div>
-                          <div class="carousel-item">
-                            <img src="multimedia/car33.png" class="d-block w-100" alt="Imagen tattoo carousel 3">
-                            <div class="carousel-caption d-md-block bg-dark bg-opacity-50">
-                              <h5>Seguimiento post sesión</h5>
-                              <p>Te acompañamos en el proceso de cicatización despejando cualquier duda</p>
-                            </div>
-                          </div>
-                        </div>
-                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-                          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                          <span class="visually-hidden">Previous</span>
-                        </button>
-                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-                          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                          <span class="visually-hidden">Next</span>
-                        </button>
-                      </div>
-                      <div class="gridContainer1 container">
-                        <p class="parrafoHistoria gridHistoria1" data-aos="flip-left">
-                          Somos un equipo de amigxs y artistas que se dedican a realizar tatuajes desde el año 2010.
-                          Antes del 2010, cada uno trabajaba por cuenta propia, hasta que decidimos comenzar un emprendimiento en donde pudiéramos desarrollar un studio de tatuajes y de arte, entendiendo a estos dos puntos como un todo.
-                        </p>
-                        <p class="parrafoHistoria gridHistoria2" data-aos="flip-right">
-                          Nuestro objetivo fue crear y brindar una experiencia que acompañe al cliente de punta a punta, acompañándolo desde el momento en que decide realizar su tatuaje con nosotros hasta el momento en que terminamos la sesión y coordinamos un seguimiento virtual de una semana de duración, para que pueda quitar todas sus dudas en todo momento.
-                        </p>
-                      </div>
-                    </section>
-        </section>
+      <section id="Historia">
+        <h1 class="tituloHistoria" data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine">Somos ES</h1>
+        <!-- CAROUSEL BOOTSTRAP -->
+        <div id="carouselExampleCaptions" class="carousel slide carouselES w-100 container" data-bs-ride="carousel">
+          <div class="carousel-indicators">
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+          </div>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+            <img src="multimedia/car1.png" class="d-block w-100" alt="Imagen tattoo carousel 1">
+              <div class="carousel-caption d-md-block bg-dark bg-opacity-50">
+                <h5>Experiencia ES</h5>
+                <p>Desde que reservas tu turno hasta luego de realizado el trabajo</p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img src="multimedia/historia.png" class="d-block w-100" alt="Imagen tattoo carousel 2">
+              <div class="carousel-caption d-md-block bg-dark bg-opacity-50">
+                <h5>Asesoramiento personalizado</h5>
+                <p>Te ayudamos a encontrar el diseño perfecto para tu tatuaje</p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img src="multimedia/car33.png" class="d-block w-100" alt="Imagen tattoo carousel 3">
+              <div class="carousel-caption d-md-block bg-dark bg-opacity-50">
+                <h5>Seguimiento post sesión</h5>
+                <p>Te acompañamos en el proceso de cicatización despejando cualquier duda</p>
+              </div>
+            </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+      <!--Termina carousel Bootstrap-->
+      <div class="gridContainer1 container">
+        <p class="parrafoHistoria gridHistoria1" data-aos="flip-left">
+          Somos un equipo de amigxs y artistas que se dedican a realizar tatuajes desde el año 2010.
+          Antes del 2010, cada uno trabajaba por cuenta propia, hasta que decidimos comenzar un emprendimiento en donde pudiéramos desarrollar un studio de tatuajes y de arte, entendiendo a estos dos puntos como un todo.
+        </p>
+        <p class="parrafoHistoria gridHistoria2" data-aos="flip-right">
+          Nuestro objetivo fue crear y brindar una experiencia que acompañe al cliente de punta a punta, acompañándolo desde el momento en que decide realizar su tatuaje con nosotros hasta el momento en que terminamos la sesión y coordinamos un seguimiento virtual de una semana de duración, para que pueda quitar todas sus dudas en todo momento.
+        </p>
+      </div>
+      </section>
     </main>
     <!-- Fin zona central de mi sitio -->
 
