--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <!-- Acá comienza la cabecera -->
     <header id="Home">
         <!-- Banner de mi sitio -->
-        <a href="index.html"><img class="bannerHeader" src="multimedia/bannerHeader2.png" alt="Banner"></a>
+        <a href="index.html"><img class="bannerHeader" src="multimedia/bannerHeader2.webp" alt="Banner"></a>
         <!-- NAVBAR BOOTSTRAP -->
         <nav class="navbar navbar-expand-lg navbar-light bg-esTattoo opacity-100 navNecke">
             <div class="container-fluid">
@@ -73,21 +73,21 @@
           </div>
           <div class="carousel-inner">
             <div class="carousel-item active">
-            <img src="multimedia/car1.png" class="d-block w-100" alt="Imagen tattoo carousel 1">
+            <img src="multimedia/car1.webp" class="d-block w-100" alt="Imagen tattoo carousel 1">
               <div class="carousel-caption d-md-block bg-dark bg-opacity-50">
                 <h5>Experiencia ES</h5>
                 <p>Desde que reservas tu turno hasta luego de realizado el trabajo</p>
               </div>
             </div>
             <div class="carousel-item">
-              <img src="multimedia/historia.png" class="d-block w-100" alt="Imagen tattoo carousel 2">
+              <img src="multimedia/historia.webp" class="d-block w-100" alt="Imagen tattoo carousel 2">
               <div class="carousel-caption d-md-block bg-dark bg-opacity-50">
                 <h5>Asesoramiento personalizado</h5>
                 <p>Te ayudamos a encontrar el diseño perfecto para tu tatuaje</p>
               </div>
             </div>
             <div class="carousel-item">
-              <img src="multimedia/car33.png" class="d-block w-100" alt="Imagen tattoo carousel 3">
+              <img src="multimedia/car33.webp" class="d-block w-100" alt="Imagen tattoo carousel 3">
               <div class="carousel-caption d-md-block bg-dark bg-opacity-50">
                 <h5>Seguimiento post sesión</h5>
                 <p>Te acompañamos en el proceso de cicatización despejando cualquier duda</p>
@@ -121,24 +121,24 @@
     <footer>
         <div class="ESLogo">
             <a href="index.html">
-                <img class="imgLogo" src="multimedia/logo2.png" alt="Logo">
+                <img class="imgLogo" src="multimedia/logo2.webp" alt="Logo">
             </a>
         </div>
         <nav class="redesContainer">
             <div class="redes">
                 <div class="Instagram">            
                     <a href="https://www.instagram.com" target="_blank">
-                        <img class="imgRedes" src="multimedia/ig.png" alt="icono Instagram">
+                        <img class="imgRedes" src="multimedia/ig.webp" alt="icono Instagram">
                     </a>
                 </div>
                 <div class="Facebook">
                     <a href="https://www.facebook.com" target="_blank">
-                        <img class="imgRedes" src="multimedia/fb.png" alt="icono Facebook">
+                        <img class="imgRedes" src="multimedia/fb.webp" alt="icono Facebook">
                     </a>
                 </div>
                 <div class="WhatsApp">
                     <a href="https://web.whatsapp.com" target="_blank">
-                        <img class="imgRedes" src="multimedia/wapp.png" alt="icono Whatsapp">
+                        <img class="imgRedes" src="multimedia/wapp.webp" alt="icono Whatsapp">
                     </a>
                 </div>
             </div>
