--- a/trabajos.html
+++ b/trabajos.html
@@ -28,7 +28,7 @@
 <!-- Acá comienza la cabecera -->
 <header id="Home">
     <!-- Banner de mi sitio -->
-    <a href="index.html"><img class="bannerHeader" src="multimedia/bannerHeader2.png" alt="Banner"></a>
+    <a href="index.html"><img class="bannerHeader" src="multimedia/bannerHeader2.webp" alt="Banner"></a>
     <!-- NAVBAR BOOTSTRAP -->
     <nav class="navbar navbar-expand-lg navbar-light bg-esTattoo opacity-100 navNecke">
         <div class="container-fluid">
@@ -70,22 +70,22 @@
             <!-- Galería de imágenes -->
             <div class="gridContainer">
                 <div class="image1">
-                    <img class="imgTrabajos" src="multimedia/minim2.png" alt="Tatuaje caras minimalista">
+                    <img class="imgTrabajos" src="multimedia/minim2.webp" alt="Tatuaje caras minimalista">
                 </div>
                 <div class="image2">
-                    <img class="imgTrabajos" src="multimedia/img2.png" alt="Tatuaje minimalista">
+                    <img class="imgTrabajos" src="multimedia/img2.webp" alt="Tatuaje minimalista">
                 </div>
                 <div class="image3">
-                    <img class="imgTrabajos" src="multimedia/rcb.png" alt="Tatuaje rosecoloredboy">
+                    <img class="imgTrabajos" src="multimedia/rcb.webp" alt="Tatuaje rosecoloredboy">
                 </div>
                 <div class="image4">
-                    <img class="imgTrabajos" src="multimedia/img6.png" alt="Tatuaje amor amarillo">
+                    <img class="imgTrabajos" src="multimedia/img6.webp" alt="Tatuaje amor amarillo">
                 </div>
                 <div class="image5">
-                    <img class="imgTrabajos" src="multimedia/img7.png" alt="Tatuaje unknown pleasures">
+                    <img class="imgTrabajos" src="multimedia/img7.webp" alt="Tatuaje unknown pleasures">
                 </div>
                 <div class="image6">
-                    <img class="imgTrabajos" src="multimedia/img8.png" alt="Tatuaje faro">
+                    <img class="imgTrabajos" src="multimedia/img8.webp" alt="Tatuaje faro">
                 </div>
             </div>
         </section>
@@ -94,24 +94,24 @@
 <footer>
     <div class="ESLogo">
         <a href="index.html">
-            <img class="imgLogo" src="multimedia/logo2.png" alt="Logo">
+            <img class="imgLogo" src="multimedia/logo2.webp" alt="Logo">
         </a>
     </div>
     <nav class="redesContainer">
         <div class="redes">
             <div class="Instagram">            
                 <a href="https://www.instagram.com" target="_blank">
-                    <img class="imgRedes" src="multimedia/ig.png" alt="icono Instagram">
+                    <img class="imgRedes" src="multimedia/ig.webp" alt="icono Instagram">
                 </a>
             </div>
             <div class="Facebook">
                 <a href="https://www.facebook.com" target="_blank">
-                    <img class="imgRedes" src="multimedia/fb.png" alt="icono Facebook">
+                    <img class="imgRedes" src="multimedia/fb.webp" alt="icono Facebook">
                 </a>
             </div>
             <div class="WhatsApp">
                 <a href="https://web.whatsapp.com" target="_blank">
-                    <img class="imgRedes" src="multimedia/wapp.png" alt="icono Whatsapp">
+                    <img class="imgRedes" src="multimedia/wapp.webp" alt="icono Whatsapp">
                 </a>
             </div>
         </div>
