--- a/turnos.html
+++ b/turnos.html
@@ -26,7 +26,7 @@
     <!-- Acá comienza la cabecera -->
     <header id="Home">
         <!-- Banner de mi sitio -->
-        <a href="index.html"><img class="bannerHeader" src="multimedia/bannerHeader2.png" alt="Banner"></a>
+        <a href="index.html"><img class="bannerHeader" src="multimedia/bannerHeader2.webp" alt="Banner"></a>
         <!-- NAVBAR BOOTSTRAP -->
         <nav class="navbar navbar-expand-lg navbar-light bg-esTattoo opacity-100 navNecke">
             <div class="container-fluid">
@@ -99,24 +99,24 @@
         <footer>
             <div class="ESLogo">
                 <a href="index.html">
-                    <img class="imgLogo" src="multimedia/logo2.png" alt="Logo">
+                    <img class="imgLogo" src="multimedia/logo2.webp" alt="Logo">
                 </a>
             </div>
             <nav class="redesContainer">
                 <div class="redes">
                     <div class="Instagram">            
                         <a href="https://www.instagram.com">
-                            <img class="imgRedes" src="multimedia/ig.png" alt="icono Instagram">
+                            <img class="imgRedes" src="multimedia/ig.webp" alt="icono Instagram">
                         </a>
                     </div>
                     <div class="Facebook">
                         <a href="https://www.facebook.com">
-                            <img class="imgRedes" src="multimedia/fb.png" alt="icono Facebook">
+                            <img class="imgRedes" src="multimedia/fb.webp" alt="icono Facebook">
                         </a>
                     </div>
                     <div class="WhatsApp">
                         <a href="https://www.web.whatsapp.com">
-                            <img class="imgRedes" src="multimedia/wapp.png" alt="icono Whatsapp">
+                            <img class="imgRedes" src="multimedia/wapp.webp" alt="icono Whatsapp">
                         </a>
                     </div>
                 </div>
