--- a/trabajos.html
+++ b/trabajos.html
@@ -100,12 +100,12 @@
     <nav class="redesContainer">
         <div class="redes">
             <div class="Instagram">            
-                <a href="https://www.instagram.com" target="_blank">
+                <a href="https://www.instagram.com/esartandtattoostudio1/" target="_blank">
                     <img class="imgRedes" src="multimedia/ig.webp" alt="icono Instagram">
                 </a>
             </div>
             <div class="Facebook">
-                <a href="https://www.facebook.com" target="_blank">
+                <a href="https://www.facebook.com/Coderhouse/" target="_blank">
                     <img class="imgRedes" src="multimedia/fb.webp" alt="icono Facebook">
                 </a>
             </div>
