--- a/turnos.html
+++ b/turnos.html
@@ -105,12 +105,12 @@
             <nav class="redesContainer">
                 <div class="redes">
                     <div class="Instagram">            
-                        <a href="https://www.instagram.com">
+                        <a href="https://www.instagram.com/esartandtattoostudio1/">
                             <img class="imgRedes" src="multimedia/ig.webp" alt="icono Instagram">
                         </a>
                     </div>
                     <div class="Facebook">
-                        <a href="https://www.facebook.com">
+                        <a href="https://www.facebook.com/Coderhouse/">
                             <img class="imgRedes" src="multimedia/fb.webp" alt="icono Facebook">
                         </a>
                     </div>
