--- a/contacto.html
+++ b/contacto.html
@@ -100,7 +100,7 @@
             <nav class="redesContainer">
                 <div class="redes">
                     <div class="Instagram">            
-                        <a href="https://www.instagram.com/esartandtattoostudio1/">
+                        <a href="https://www.instagram.com/coderhouse/">
                             <img class="imgRedes" src="multimedia/ig.webp" alt="icono Instagram">
                         </a>
                     </div>
