--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
         <nav class="redesContainer">
             <div class="redes">
                 <div class="Instagram">            
-                    <a href="https://www.instagram.com/esartandtattoostudio1/" target="_blank">
+                    <a href="https://www.instagram.com/coderhouse/" target="_blank">
                         <img class="imgRedes" src="multimedia/ig.webp" alt="icono Instagram">
                     </a>
                 </div>
